# Domotique-Jetson

./: .gitignore  GUIDE-TEST.md  MVP-COMPLETE.md  QUICK-REFERENCE.md  README.md  start-dev.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/scripts/: start_mqtt_tunnel.sh
backend/src/app/: __init__.py  main.py
backend/src/app/api/: __init__.py
backend/src/app/api/v1/: activity.py  auth.py  automations.py  config.py  devices.py  emails.py  health.py  integrations.py  kiosk.py  modes.py  permissions.py  profiles.py  temperature.py  trading.py  users.py  websocket.py
backend/src/app/core/: config.py  response.py  security.py
backend/src/app/db/: __init__.py  database.py
backend/src/app/models/: __init__.py  activity_logs.py  automations.py  devices.py  modes.py  permissions.py  profiles.py  users.py
backend/src/app/schemas/: auth.py  devices.py  profiles.py  users.py
backend/src/app/services/: activity_logs.py  automations.py  devices.py  emails.py  hubitat.py  mistral_brain.py  modes.py  mqtt.py  permissions.py  profiles.py  users.py
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/api/: activity.ts  auth.ts  automations.ts  client.ts  config.ts  devices.ts  emails.ts  health.ts  index.ts  integrations.ts  modes.ts  (+3 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/tests/: login.spec.ts
scripts/: gmail_auth.py  gmail_auth_console.py
(+36 files in other folders)
